2006-03-05  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl.in (quiet_warnings): New variable.
	(warn): Do not print if quiet_warnings.
	* dpkg-source.pl (usageversion): Document new option `-q'.

2006-03-05  Guillem Jover  <guillem@debian.org>

	* debian/control (Build-Depends): Do not depend on libselinux1-dev
	in GNU/kFreeBSD amd64.

2006-02-28  Matt Kraai  <kraai@ftbfs.org>

	* scripts/dpkg-gencontrol.pl: Fix typo (occoured -> occurred).
	* scripts/dpkg-source.pl: Likewise.

2006-02-19  Guillem Jover  <guillem@debian.org>

	* po/README.translators: Move to ...
	* README.translators: ... here. Formatting fixes. Update to refer
	to latest new ChangeLog files, and rules.

2006-02-19  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-scanpackages.pl: Fix option
	parsing of arch option. Also fix a mistake
	in constructing @find_args.

2006-02-18  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-gencontrol.pl: Call parsedep
	with use_arch and reduce_arch parameters to
	allow using architectures in dependency
	fields of binary packages in debian/control.

	* scripts/dpkg-gencontrol.pl: Fix handling of
	debian/files when architecture is set via -D
	command line option. The value override was
	applied too late.

	* configure.ac: Bump version to 1.13.17~.

	* configure.ac: Release 1.13.16.

2006-02-17  Frank Lichtenheld  <djpig@debian.org>

	* man/ChangeLog: Start an own changelog for the
	manpages.

	* scripts/dpkg-scanpackages.pl: Fix override handling
	which was broken by the latest changes.

	* scripts/dpkg-gencontrol.pl: Make -isp the default
	behaviour.
	* man/C/dpkg-source.1: Document the behaviour
	change in dpkg-gencontrol.

2006-02-17  Guillem Jover  <guillem@debian.org>

	* debian/dselect.install: Install only dselect domain.
	* debian/dpkg.install: Install only dpkg domain.
	* dselect/po: New directory.
	* dselect/main.cc (main): Use DSELECT domain.
	* dselect/Makefile.am (SUBDIRS): Add po.