@@ -16,6 +16,7 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Add dpkg-query(1) in the SEE ALSO section in dpkg(1). Closes: #354643
   * Don't try to compile in SELinux support on GNU/kFreeBSD amd64.
   * Add new quiet option to dpkg-source to supress warnings. Closes: #355065
+  * Do not expand architecture aliases anymore in .dsc files.
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda). Closes: #353782
