@@ -1,3 +1,12 @@
+2006-03-15  Guillem Jover  <guillem@debian.org>
+
+	* scripts/controllib.pl.in: Rename to ...
+	* scripts/controllib.pl: ... this.
+	(debian_arch_expand): Remove function. Fix all callers.
+	(pkgdatadir, read_cputable, read_ostable): Move to ...
+	* scripts/dpkg-architecture.pl: ... here.
+	* scripts/Makefile.am (%.pl): Remove rule.
+
 2006-03-05  Guillem Jover  <guillem@debian.org>
 
 	* scripts/controllib.pl.in (quiet_warnings): New variable.
